[package]
name = "dlog"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default_run = "dlog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dlog"
path = "src/main.rs"

[dependencies]
colored = "2.0.0"
dirs-next = "2.0.0"
serde = { version = "*", features = ["derive"] }
chrono = {version="*", features=["serde"]}
toml = "0.5.7"
csv = "1.1.5"
comfy-table = "1.4.2"
uuid = { version = "*", features = ["v4", "serde"] }
atty = "0.2.14"
dialoguer = "0.7.1"
ring = "0.16.19"
clipboard = "0.5.0"
# indicatif = "0.15.0"
# rspark = "0.2.0"
# rustyline = "7.0.0"
# console = "*" NOTE use this instead of colored?
# notify = "4.0.15"
# reqwest = "0.10.9"
# signal-hook = "0.2.1"
# csv-core = "0.1.10"
# notify = "*"
# parse_duration = "*" # 9kb
# uom = {version="*", features=[]}
# rustyline = "7.0.0"
# serde_json = "*"
# csv-core = ">=0.1.6"
# ansi_term = "*"
# atty = ">=0.2.14"
# thiserror = "*"
# walkdir = ">=2.3.1"
# read_input
# term-table = "1.3.0"
# duct = "*"
# console = "*"
# dialoguer = "*" #18kb
# num = "*"
# Inflector = "*" #16kb
# parking_lot = "*"
# indexmap = "*"
# smol_str = { version = "0.1.15", features = ["serde"] }
# walkdir = "*"
# colourful = "*"
# rayon = "*"
# ureq
# chrono = "*"
# chrono-english = "*"
# chrono = "*"
# chrono-english = "*"
# once_cell = "*"
# anyhow = "*"
# humantime
# figment = "*" 50kb config
# textwrap = "*"
# regex = "*" 237kb
  # aho-corasick = "*" 118
  # regex-automata = "*" 115
  # regex-syntax = "*"
# fst = "0.4" 1.58 MB levenshtein feat
# shellwords = "*"
# bstr = "*" 356
# term = "*"
# term_size = "*"
# crossbeam
# rustyline = "*" # 88kb
# prettytable-rs = "*" #28kb
# anyhow = "*"
# chrono-human = "*"
# lite-json = "*" 10kb write-json 8kb, no dep
# surf = "*" 50kb ureq=68kb

[dependencies.clap]
version = "3.0.0-beta.2"
features = [ "suggestions", "color" ]

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
# assert_fs = "1.0.0"
tempfile = "*"
# assert-json-diff = "*"
# json_env_logger = "*"

[profile.dev]
debug-assertions = true
panic = "abort"
debug = true
incremental = true
lto = false

[profile.release]
lto = true
debug = true
overflow-checks = true
codegen-units = 16

[profile.test]
incremental = true
lto = false

