[package]
name = "dlog"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default_run = "dlog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dlog"
path = "src/bin/dlog.rs"

[lib]
name = "dlog"
path = "src/lib.rs"

[dependencies]
colored = "2.0.0"
dirs-next = "2.0.0"
serde = { version = "*", features = ["derive"] }
chrono = {version="*", features=["serde"]}
crossterm = "*"
toml = "0.5.7"
csv = "1.1.5"
comfy-table = "1.4.2"
indicatif = "*"
uuid = { version = "*", features = ["v4", "serde"] }
atty = "0.2.14"
dialoguer = "0.7.1"
ring = "0.16.19"
clipboard = "0.5.0"
serde_json = {version = "1.0.60", features = ["preserve_order"]}
dashmap = { version = "*", features = ["serde"] }
grep-cli = "*"
edit = "*"
chrono-humanize = "0.1.1"
chrono-english = "0.1.4"
ignore = "*"
chrono-tz = "0.5.3"
regex = "1.4.2"
glob = "*"
sled = "*"
lazy_static = "*"

[dependencies.config]
version = "*"
default-features = false
features = ["toml"]

[dependencies.clap]
version = "3.0.0-beta.2"
features = [ "suggestions", "color" ]

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
# assert_fs = "1.0.0"
tempfile = "*"
# assert-json-diff = "*"
# json_env_logger = "*"

[profile.dev]
debug-assertions = true
panic = "abort"
debug = true
incremental = true
lto = false

[profile.release]
lto = true
debug = true
overflow-checks = true
codegen-units = 16

[profile.test]
incremental = true
lto = false

