[package]
name = "dlog"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

[[bin]]
name = "dlog"
path = "src/bin/dlog.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.1.0"
termcolor = "*"
chrono = { vesion = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
toml = "*" # NOTE ditch for config?
comfy-table = "1.4.2"
indicatif = "*"
dl_common = { path = "../dl-common/" }
dl_parse = { path = "../dl-parse/" }
atty = "0.2.14"
lazy_static = "1.4.0"


[dependencies.config]
version = "*"
default-features = false
features = ["toml"]

[dependencies.clap]
version = "3.0.0-beta.2"
features = [ "suggestions", "color" ]
