[package]
name = "dl_common"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dl_common"
path = "src/lib.rs"

[dependencies]
strsim = "*"
csv = "*"
rustyline = "*"
dirs-next = "*"
serde = { version = "*", features = ["derive"] }
chrono = {version="*", features=["serde", "std"]}
toml = "0.5.7"
uuid = { version = "*", features = ["v4", "serde"] }
serde_json = {version = "1.0.60", features = ["preserve_order"]}
ring = "0.16.19"
chrono-humanize = "0.1.1"
chrono-english = "0.1.4"
chrono-tz = "0.5.3"
sled = "*"
lazy_static = "1.4.0"
grep-cli = "*"

[dependencies.config]
version = "*"
default-features = false
features = ["toml"]
