[package]
name = "dl_tui"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default-run = "dlog_tui"

[[bin]]
name = "gdlog"
path = "src/bin/gdlog.rs"

[lib]
name = "dl_tui"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
tui = { version = "*", features = ["crossterm"] }
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
dirs-next = "*"
rustyline = "*"

[dependencies.clap]
version = "3.0.0-beta.2"
features = [ "suggestions", "color" ]
